fix role cards text and icons to not get too small

--- a/src/RoleCard/RoleCard.css
+++ b/src/RoleCard/RoleCard.css
@@ -20,8 +20,32 @@
   padding: 1rem 1rem;
 }
 
-@media (max-width: 1100px) {
+.chevron {
+  width: 1.5vw;
+  height: 1.5vw;
+}
+
+.moniter {
+  width: 4vw;
+  height: 4vw;
+}
+
+@media (max-width: 1000px) {
   .roleTitle {
-    margin-bottom: 0.5rem;
+    font-size: 20px;
+  }
+
+  .buttonWithImage {
+    font-size: 16px;
+  }
+
+  .chevron {
+    width: 16px;
+    height: 16px;
+  }
+
+  .moniter {
+    width: 50px;
+    height: 50px;
   }
 }
